@@ -1,12 +1,11 @@
 package de.exlll.configlib;
 
 import de.exlll.configlib.ConfigurationElements.FieldElement;
-import de.exlll.configlib.ConfigurationElements.RecordComponentElement;
 
+import javax.sql.rowset.serial.SerialStruct;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.lang.reflect.RecordComponent;
 import java.util.Arrays;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -17,9 +16,7 @@ import java.util.stream.Collectors;
 
 import static de.exlll.configlib.Validator.requireNonNull;
 
-sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
-        implements Serializer<T, Map<?, ?>>
-        permits ConfigurationSerializer, RecordSerializer {
+public abstract class TypeSerializer<T, E extends ConfigurationElement<?>> implements Serializer<T, Map<?, ?>> {
     protected final Class<T> type;
     protected final ConfigurationProperties properties;
     protected final NameFormatter formatter;
@@ -39,9 +36,7 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
             Class<T> type,
             ConfigurationProperties properties
     ) {
-        return type.isRecord()
-                ? new RecordSerializer<>(type, properties)
-                : new ConfigurationSerializer<>(type, properties);
+        return new ConfigurationSerializer<>(type, properties);
     }
 
     Map<String, Serializer<?, ?>> buildSerializerMap() {
@@ -83,15 +78,16 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
         try {
             return (value != null) ? serializer.serialize(value) : null;
         } catch (ClassCastException e) {
-            String msg = ("Serialization of value '%s' for element '%s' of type '%s' failed.\n" +
-                          "The type of the object to be serialized does not match the type " +
-                          "the custom serializer of type '%s' expects.")
-                    .formatted(
-                            value,
-                            element.element(),
-                            element.declaringType(),
-                            serializer.getClass()
-                    );
+            String msg = String.format(
+                    "Serialization of value '%s' for element '%s' of type '%s' failed.\n" +
+                    "The type of the object to be serialized does not match the type " +
+                    "the custom serializer of type '%s' expects.",
+                    value,
+                    element.element(),
+                    element.declaringType(),
+                    serializer.getClass()
+            );
+
             throw new ConfigurationException(msg, e);
         }
     }
@@ -189,10 +185,16 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
             final var pp = (UnaryOperator<Object>) postProcessor;
             return pp.apply(value);
         } catch (ClassCastException e) {
-            String msg = ("Deserialization of value '%s' for element '%s' of type '%s' failed.\n" +
-                          "The type of the object to be deserialized does not match the type " +
-                          "post-processor '%s' expects.")
-                    .formatted(value, element.element(), element.declaringType(), postProcessor);
+            String msg = String.format(
+                    "Deserialization of value '%s' for element '%s' of type '%s' failed.\n" +
+                    "The type of the object to be deserialized does not match the type " +
+                    "post-processor '%s' expects.",
+                    value,
+                    element.element(),
+                    element.declaringType(),
+                    postProcessor
+            );
+
             throw new ConfigurationException(msg, e);
         }
     }
@@ -202,21 +204,17 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
     ) {
         if (!element.type().isPrimitive()) return;
 
-        if (element instanceof RecordComponentElement recordComponentElement) {
-            final RecordComponent component = recordComponentElement.element();
-            String msg = """
-                         Post-processors must not return null for primitive record \
-                         components but some post-processor of component '%s' of \
-                         record type '%s' does.\
-                         """.formatted(component, component.getDeclaringRecord());
-            throw new ConfigurationException(msg);
-        }
 
-        if (element instanceof FieldElement fieldElement) {
+        if (element instanceof FieldElement) {
+            FieldElement fieldElement = (FieldElement) element;
             final Field field = fieldElement.element();
-            String msg = ("Post-processors must not return null for primitive fields " +
-                          "but some post-processor of field '%s' does.")
-                    .formatted(field);
+
+            String msg = String.format(
+                    "Post-processors must not return null for primitive fields " +
+                    "but some post-processor of field '%s' does.",
+                    field
+            );
+
             throw new ConfigurationException(msg);
         }
 
@@ -226,19 +224,16 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
     private static void requireNonPrimitiveType(ConfigurationElement<?> element) {
         if (!element.type().isPrimitive()) return;
 
-        if (element instanceof RecordComponentElement recordComponentElement) {
-            final RecordComponent component = recordComponentElement.element();
-            String msg = ("Cannot set component '%s' of record type '%s' to null. " +
-                          "Primitive types cannot be assigned null values.")
-                    .formatted(component, component.getDeclaringRecord());
-            throw new ConfigurationException(msg);
-        }
-
-        if (element instanceof FieldElement fieldElement) {
+        if (element instanceof FieldElement) {
+            FieldElement fieldElement = (FieldElement) element;
             final Field field = fieldElement.element();
-            String msg = ("Cannot set field '%s' to null value. " +
-                          "Primitive types cannot be assigned null.")
-                    .formatted(field);
+
+            String msg = String.format(
+                    "Cannot set field '%s' to null value. " +
+                    "Primitive types cannot be assigned null.",
+                    field
+            );
+
             throw new ConfigurationException(msg);
         }
 
@@ -250,42 +245,61 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
                 .filter(method -> method.isAnnotationPresent(PostProcess.class))
                 .filter(Predicate.not(Method::isSynthetic))
                 .filter(Predicate.not(this::isAccessorMethod))
-                .toList();
+                .collect(Collectors.toList());
 
         if (list.isEmpty())
             return UnaryOperator.identity();
         if (list.size() > 1) {
-            String methodNames = String.join("\n  ", list.stream().map(Method::toString).toList());
-            String msg = "Configuration types must not define more than one method for " +
-                         "post-processing but type '%s' defines %d:\n  %s"
-                                 .formatted(type, list.size(), methodNames);
+            String methodNames = list.stream().map(Method::toString).collect(Collectors.joining("\n  "));
+
+            String msg = String.format(
+                    "Configuration types must not define more than one method for " +
+                    "post-processing but type '%s' defines %d:\n  %s",
+                    type,
+                    list.size(),
+                    methodNames
+            );
+
             throw new ConfigurationException(msg);
         }
 
         final Method method = list.get(0);
         final int modifiers = method.getModifiers();
         if (Modifier.isAbstract(modifiers) || Modifier.isStatic(modifiers)) {
-            String msg = "Post-processing methods must be neither abstract nor static, " +
-                         "but post-processing method '%s' of type '%s' is."
-                                 .formatted(method, type);
+            String msg = String.format(
+                    "Post-processing methods must be neither abstract nor static, " +
+                    "but post-processing method '%s' of type '%s' is.",
+                    method,
+                    type
+            );
+
             throw new ConfigurationException(msg);
         }
 
         final int parameterCount = method.getParameterCount();
         if (parameterCount > 0) {
-            String msg = "Post-processing methods must not define any parameters but " +
-                         "post-processing method '%s' of type '%s' defines %d."
-                                 .formatted(method, type, parameterCount);
+            String msg = String.format(
+                    "Post-processing methods must not define any parameters but " +
+                    "post-processing method '%s' of type '%s' defines %d.",
+                    method,
+                    type,
+                    parameterCount
+            );
+
             throw new ConfigurationException(msg);
         }
 
         final Class<?> returnType = method.getReturnType();
         if ((returnType != void.class) && (returnType != type)) {
-            String msg = "The return type of post-processing methods must either be 'void' or " +
-                         "the same type as the configuration type in which the post-processing " +
-                         "method is defined. The return type of the post-processing method of " +
-                         "type '%s' is neither 'void' nor '%s'."
-                                 .formatted(type, type.getSimpleName());
+            String msg = String.format(
+                    "The return type of post-processing methods must either be 'void' or " +
+                    "the same type as the configuration type in which the post-processing " +
+                    "method is defined. The return type of the post-processing method of " +
+                    "type '%s' is neither 'void' nor '%s'.",
+                    type,
+                    type.getSimpleName()
+            );
+
             throw new ConfigurationException(msg);
         }
 
@@ -303,12 +317,9 @@ sealed abstract class TypeSerializer<T, E extends ConfigurationElement<?>>
     }
 
     final boolean isAccessorMethod(Method method) {
-        if (!type.isRecord()) return false;
         if (!method.getDeclaringClass().equals(type)) return false;
         if (method.getParameterCount() > 0) return false;
-        return Arrays.stream(type.getRecordComponents())
-                .map(RecordComponent::getName)
-                .anyMatch(s -> s.equals(method.getName()));
+        return !method.getReturnType().equals(void.class);
     }
 
     protected abstract void requireSerializableElements();
